<resources>
    <string name="app_name">My First App</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="txt_choose_car">Wybierz samochód</string>
    <string name="title_activity_choose_car">ChooseCarActivity</string>
    <string name="button_choose_car">Choose car</string>
    <string name="lbl_car_name">Nazwa samochodu</string>
    <string name="lbl_car_year">Rok produkcji</string>
    <string name="lbl_default_fueltype">Wybierz domyślne paliwo</string>
    <string name="btn_add_car">Dodaj samochód</string>
    <string name="btn_cancel">Anuluj</string>
    <string name="checkbox_default">Domyślny samochód</string>
    <string name="title_activity_add_fuel">AddFuelActivity</string>
    <string name="btn_add_fuel">Dodaj tankowanie</string>
    <string name="lbl_car">Samochód</string>
    <string name="lbl_fuel_type">Rodzaj paliwa</string>
    <string name="lbl_mileage">Przebieg</string>
    <string name="lbl_date">Data</string>
    <string name="lbl_amount">Zatankowano</string>
    <string name="lbl_price">Cena za litr</string>
    <string name="lbl_price_overall">Koszt</string>
    <string name="lbl_fuel_full">Tankowanie do pełna</string>
    <string name="btn_change_date">Zmień datę</string>
    <string name="title_activity_all_fuels">AllFuelsActivity</string>
</resources>
